whole lot off small bugfixes
- able to select message again
- layout issues
- be able to select text

--- a/apps/servicebus-browser-frontend/src/styles.scss
+++ b/apps/servicebus-browser-frontend/src/styles.scss
@@ -26,6 +26,7 @@ head, body {
 }
 
 .hljs {
+  user-select: text;
   display: block;
   width: fit-content;
   background: var(--p-surface-50);
